# MySocket

./: CMakeLists.txt  clang-format
inc/: my_socket_server.hpp
src/: main.cpp  my_socket_client.hpp  my_socket_error.hpp  my_socket_server.hpp
